# generic-storage

./: README.md  README.rst  demo.hs  generic-storage.cabal
src/Control/Functor/: Algebra.hs
src/Data/: Tree.hs
src/Data/Tree/: Algorithms.hs  Annotated.hs  Generic.hs
